Integration with snake server, support for environment variables

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -34,14 +34,10 @@
             </div>
             <div class="row">
                 <h3>Scores</h3>
-                <table class="table">
-                    <tr>
+                <table id="score" class="table">
+                    <tr id="row1">
                         <th>Nickname</th>
                         <th>Score</th>
-                    </tr>
-                    <tr>
-                        <td>cezi</td>
-                        <td>35</td>
                     </tr>
                 </table>
             </div>
